@@ -1,6 +1,8 @@
 Version 2.2-5
 
- o Changed the default method for determining number of levels for a continuous predictor; see help page for 'effect' and discussion of the 'xlevels' argument for details.  Argument 'default.levels', while still included for compatibility, is depricated. 
+ o Modified mixed-model methods to all use in user-functios
+
+ o Changed the default method for determining number of levels for a continuous predictor; see help page for 'effect' and discussion of the 'xlevels' argument for details.  Argument 'default.levels', while still included for compatibility, is depricated.
                                                                                                 
  o Added .merMod methods for development version of lme4.
 
